--- a/testgame/test.css
+++ b/testgame/test.css
@@ -4,7 +4,7 @@ https://creativecommons.org/licenses/by-nc-sa/4.0/
 https://github.com/kalbfled/pncgame
 Please read LICENSE, on Github, for more information.
 
-To see the demo in action, visit http://www.purdone.com/dave/pncgame/.
+To see the demo in action, visit https://misc.davejk.me/pncgame/.
 */
 
 body
